welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: not found: value Fizz
	case a if (a%3==0) => return Fizz
                                     ^fizzBuzz:4: error: not found: value b
	case a if (b%5==0) => return Buzz
                   ^fizzBuzz:4: error: not found: value Buzz
	case a if (b%5==0) => return Buzz
                                     ^fizzBuzz:5: error: not found: value b
	case a if (a%3==0 && b%5==0) => return Fizz Buzz
                             ^fizzBuzz:5: error: not found: value Fizz
	case a if (a%3==0 && b%5==0) => return Fizz Buzz
                                               ^